Avijatrik Version 1


Theme Feature:
# Show post on home page From specific category
# Some category page shown on own Formatting
# all post have facebook Like, User can Easyly Like Anything using there Facebook Profile
# Customizable Menu
# customizable Header
# customizable Page
# Included own sitemap Page



17-06-2016
# added post thumbnail
# added post type support
# Added Dynamic Meta data and dynamic title on header php
# some bug fixed

8-7-2016
# added out of magazine collumn and post
# added optional style for this out-mag collumn


