@@ -1,0 +1,10 @@
+<!-- Right Sidebar -->
+				<aside class="col-lg-3 col-md-3 col-sm-3 right-sidebar" id="right_sidebar">
+					
+					<?php if ( is_active_sidebar( 'right-sidebar' ) ) : ?>
+					<div>
+					    <?php dynamic_sidebar( 'right-sidebar' ); ?>
+					</div>
+					<?php endif; ?>
+				</aside>
+				<!-- Right Sidebar -->
