@@ -33,14 +33,5 @@
                         <?php wp_reset_postdata(); ?>
 				</div>
 				<!-- /Main Content -->
-				<!-- Right Sidebar -->
-				<aside class="col-md-3 right-sidebar" id="right_sidebar">
-					
-					<?php if ( is_active_sidebar( 'right-sidebar' ) ) : ?>
-					<div>
-					    <?php dynamic_sidebar( 'right-sidebar' ); ?>
-					</div>
-					<?php endif; ?>
-				</aside>
-				<!-- Right Sidebar -->
+				<?php get_template_part( 'right-sidebar' ); ?>
 				<?php get_footer(); ?>
