@@ -1,0 +1,7 @@
+<div class="container-fluid">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12"></div>
+        </div>
+    </div>
+</div>
