@@ -76,14 +76,5 @@
                         
 				</div>
 				<!-- /Main Content -->
-				<!-- Right Sidebar -->
-				<aside class="col-lg-3 col-md-3 col-sm-3 right-sidebar" id="right_sidebar">
-					
-					<?php if ( is_active_sidebar( 'right-sidebar' ) ) : ?>
-					<div>
-					    <?php dynamic_sidebar( 'right-sidebar' ); ?>
-					</div>
-					<?php endif; ?>
-				</aside>
-				<!-- Right Sidebar -->
+				<?php get_template_part( 'right-sidebar' ); ?>
 				<?php get_footer(); ?>
