@@ -24,3 +24,6 @@ Theme Feature:
 
 
 
+# Added publication
+# some code fixed
+# need to install a plugin for embedding youtube video thumbnails
